src/passes/02-parsing/jsligo/Tests/contracts/negative/pattern_match2.ts
let test_foo = (x : test_exec_result) : string =>
  match(x, {
    Success: () => "",
    Fail: (_) => ""
  });
